Add round corners to random button in nav

--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@
 .no-uppercase {
   text-transform: none;
 }
+
+.rounded-corners {
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+}
