--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@
   -moz-border-radius: 20px;
   border-radius: 20px;
 }
+
+body {
+  background: linear-gradient(20deg, rgba(128,222,234,1) 0%, rgba(40,53,147,1) 100%);
+  height: 800px;
+}
