--- a/style.css
+++ b/style.css
@@ -10,6 +10,5 @@
 }
 
 body {
-  background: linear-gradient(20deg, rgba(128,222,234,1) 0%, rgba(40,53,147,1) 100%);
-  height: 800px;
+  background: linear-gradient(20deg, rgba(128,222,234,1) 0%, rgba(40,53,147,1) 100%) fixed;
 }
