--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background: linear-gradient(20deg, rgba(128,222,234,1) 0%, rgba(40,53,147,1) 100%) fixed;
+}
+
 /* No uppercase styling for buttons */
 .no-uppercase {
   text-transform: none;
@@ -9,6 +13,7 @@
   border-radius: 20px;
 }
 
-body {
-  background: linear-gradient(20deg, rgba(128,222,234,1) 0%, rgba(40,53,147,1) 100%) fixed;
+.test {
+  width: 70%;
+  margin:auto;
 }
