--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body {
-  background: linear-gradient(20deg, rgba(128,222,234,1) 0%, rgba(40,53,147,1) 100%) fixed;
-}
-
 /* No uppercase styling for buttons */
 .no-uppercase {
   text-transform: none;
@@ -11,6 +7,11 @@ body {
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border-radius: 50px;
+}
+
+/* Background gradient */
+#gradient {
+  background: linear-gradient(20deg, rgba(128,222,234,1) 0%, rgba(40,53,147,1) 100%) fixed;
 }
 
 /* Keep the height of the emotion cards on the front page the same */
