--- a/css/color.css
+++ b/css/color.css
@@ -9,3 +9,15 @@ canvas {
   height: 100%;
   background-color: #2c2e43;
 }
+
+.text {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+}
+
+#btn-color {
+  background-color: #9d2f49;
+  width: 200px;
+  top: 150px;
+}
