--- a/css/color.css
+++ b/css/color.css
@@ -4,18 +4,20 @@ canvas {
 
 /* ---- particles.js container ---- */
 #particles-js{
-  position: absolute;
+  position: fixed;
+  z-index: 50;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
   background-color: #2c2e43;
 }
 
 .text {
-  position: absolute;
+  position: relative;
+  z-index: 100;
   width: 100%;
   text-align: center;
-  height: 100vh;
-  overflow: scroll;
 }
 
 #beginBtn {
