--- a/css/color.css
+++ b/css/color.css
@@ -17,11 +17,22 @@ canvas {
   position: relative;
   z-index: 100;
   width: 100%;
+  height: 90vh;
   text-align: center;
+}
+
+.center-element {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 #beginBtn {
   background-color: #9d2f49;
   width: 200px;
-  top: 150px;
 }
