--- a/css/color.css
+++ b/css/color.css
@@ -73,6 +73,10 @@ canvas {
 p {
   line-height: 1.5;
   letter-spacing: 1.3px;
+  display: inline-block;
+  padding: 5px;
+  background-color: rgba(5, 5, 5, 0.7);
+  border-radius: 10px;
 }
 
 #beginBtn {
