--- a/css/color.css
+++ b/css/color.css
@@ -39,6 +39,7 @@ canvas {
   padding: 20px 0;
   text-align: center;
   font-family: 'Libre Baskerville';
+  text-shadow: 2px 0 0 #000, 0 -2px 0 #000, 0 2px 0 #000, -2px 0 0 #000;
 }
 
 /* Poem Title */
@@ -73,10 +74,10 @@ canvas {
 p {
   line-height: 1.5;
   letter-spacing: 1.3px;
-  display: inline-block;
+  /*display: inline-block;
   padding: 5px;
   background-color: rgba(5, 5, 5, 0.7);
-  border-radius: 10px;
+  border-radius: 10px;*/
 }
 
 #beginBtn {
