--- a/css/color.css
+++ b/css/color.css
@@ -74,13 +74,16 @@ canvas {
 p {
   line-height: 1.5;
   letter-spacing: 1.3px;
-  /*display: inline-block;
-  padding: 5px;
-  background-color: rgba(5, 5, 5, 0.7);
-  border-radius: 10px;*/
 }
 
 #beginBtn {
   background-color: #9d2f49;
   width: 200px;
+}
+
+#grayBackground {
+  display: inline-block;
+  padding: 10px;
+  background-color: rgba(5, 5, 5, 0.7);
+  border-radius: 10px;
 }
