--- a/css/color.css
+++ b/css/color.css
@@ -1,5 +1,5 @@
 body {
-  background-color: blue;
+  background-color: #2c2e43;
 }
 
 canvas {
@@ -28,6 +28,19 @@ canvas {
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   z-index: 100;
+}
+
+.close {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 101;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.close-text {
+  font-size: 2.5rem;
 }
 
 .arrow {
