--- a/css/color.css
+++ b/css/color.css
@@ -46,7 +46,7 @@ canvas {
 .arrow {
   height: 100%;
   width: 10%;
-  position: absolute;
+  position: fixed;
   z-index:100;
   cursor: pointer;
 }
