--- a/css/color.css
+++ b/css/color.css
@@ -2,22 +2,26 @@ body {
   background-color: #2c2e43;
 }
 
+/* ----- particles.js container ----- */
+
 canvas {
   display: block;
 }
 
-/* ---- particles.js container ---- */
 #particles-js{
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 50;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
   background-color: #2c2e43;
   transition: background-color 3s linear;
 }
 
+/* ----- Positioning and Navigation ----- */
+
+/* Center element vertically and horizontally */
 .center-element {
   position: absolute;
   top: 50%;
@@ -30,40 +34,49 @@ canvas {
   z-index: 100;
 }
 
-.close {
+/* Begin Button */
+#beginBtn {
+  width: 200px;
+  background-color: #9d2f49;
+}
+
+/* Navigation buttons on the page */
+.nav-buttons {
   position: fixed;
+  z-index: 100;
+  cursor: pointer;
+  user-select: none;
+}
+
+/* Close Button */
+.close-button {
   top: 0;
   left: 0;
   z-index: 101;
   padding: 0.5rem;
-  cursor: pointer;
-}
-
-.tone {
-  position:fixed;
-  top: 0;
-  right: 0;
-  z-index: 101;
-  padding: 0;
-}
-
-.tone-text {
-  font-size: 1rem;
-  margin: 1rem;
-  user-select: none;
 }
 
 .close-text {
   font-size: 2.5rem;
-  user-select: none;
 }
 
+/* Tone Text */
+.tone {
+  top: 0;
+  right: 0;
+  z-index: 99;
+  padding: 0;
+}
+
+.tone-text {
+  margin: 1rem;
+  font-size: 1rem;
+}
+
+/* Left and Right Arrows */
 .arrow {
   height: 100%;
   width: 10%;
-  position: fixed;
-  z-index:100;
-  cursor: pointer;
 }
 
 .next {
@@ -76,13 +89,15 @@ canvas {
 
 .arrow-text {
   margin: auto;
-  user-select: none;
 }
-/* Poem Container */
+
+/* ----- Poem Container ----- */
+
+/* Contains title, poet, and stanza */
 #poem {
   position: relative;
-  z-index: 100;
   width: 80%;
+  z-index: 100;
   margin: auto;
   margin-top: 2.5rem;
   padding: 20px 0;
@@ -93,18 +108,19 @@ canvas {
 
 /* Poem Title */
 #title {
+  margin-bottom: 10px;
   font-size: 34px;
   line-height: 1.2;
-  margin-bottom: 10px;
 }
 
-/* Styling on Poet's Name */
+/* Poet's Name */
 #poet {
+  margin-bottom: 30px;
   font-size: 18px;
   font-style: italic;
-  margin-bottom: 30px;
 }
 
+/* Add '-' Before and After Name */
 #poet:before {
   content: "- ";
 }
@@ -125,11 +141,7 @@ p {
   letter-spacing: 1.3px;
 }
 
-#beginBtn {
-  background-color: #9d2f49;
-  width: 200px;
-}
-
+/* Gray Background Behind Text */
 #grayBackground {
   display: inline-block;
   padding: 10px;
